# mbed-os

./: .travis.yml  codecov.yml  script.py
.github/workflows/: basic_checks.yml
connectivity/: CMakeLists.txt
connectivity/FEATURE_RTP_MIDI/: CMakeLists.txt
connectivity/FEATURE_RTP_MIDI/include/: MIDIReadWrite.h  RTPMIDI.h  RTPMIDI_RealiseInterface.h  first_attempt_RTPMIDI.h
connectivity/FEATURE_RTP_MIDI/source/: RTPMIDI.cpp
connectivity/FEATURE_RTP_MIDI/tests/UNITTESTS/: CMakeLists.txt
connectivity/FEATURE_RTP_MIDI/tests/UNITTESTS/rtpmidi/: CMakeLists.txt  test_rtpmidi.cpp
connectivity/netsocket/include/netsocket/: CellularNonIPSocket.h  InternetSocket.h  Socket.h  TLSSocketWrapper.h
connectivity/netsocket/source/: CellularNonIPSocket.cpp
drivers/include/drivers/: FlashIAP.h  SerialBase.h  TickerDataClock.h  TimerEvent.h
drivers/source/: SerialBase.cpp  TimerEvent.cpp
drivers/tests/UNITTESTS/: CMakeLists.txt
drivers/tests/UNITTESTS/AnalogOut/: CMakeLists.txt
drivers/tests/UNITTESTS/BufferedSerial/: CMakeLists.txt
drivers/tests/UNITTESTS/BusIn/: CMakeLists.txt
drivers/tests/UNITTESTS/BusInOut/: CMakeLists.txt
drivers/tests/UNITTESTS/BusOut/: CMakeLists.txt
drivers/tests/UNITTESTS/CAN/: CMakeLists.txt
drivers/tests/UNITTESTS/DigitalIn/: CMakeLists.txt
drivers/tests/UNITTESTS/DigitalInOut/: CMakeLists.txt
drivers/tests/UNITTESTS/DigitalOut/: CMakeLists.txt
drivers/tests/UNITTESTS/FlashIAP/: CMakeLists.txt
drivers/tests/UNITTESTS/I2C/: CMakeLists.txt
drivers/tests/UNITTESTS/I2CSlave/: CMakeLists.txt
drivers/tests/UNITTESTS/InterruptIn/: CMakeLists.txt
drivers/tests/UNITTESTS/MbedCRC/: CMakeLists.txt
drivers/tests/UNITTESTS/OSPI/: CMakeLists.txt
drivers/tests/UNITTESTS/PortIn/: CMakeLists.txt
drivers/tests/UNITTESTS/PortInOut/: CMakeLists.txt
drivers/tests/UNITTESTS/PortOut/: CMakeLists.txt
drivers/tests/UNITTESTS/QSPI/: CMakeLists.txt
drivers/tests/UNITTESTS/ResetReason/: CMakeLists.txt
drivers/tests/UNITTESTS/SPI/: CMakeLists.txt
drivers/tests/UNITTESTS/SPISlave/: CMakeLists.txt
drivers/tests/UNITTESTS/SerialBase/: CMakeLists.txt
drivers/tests/UNITTESTS/SerialWireOutput/: CMakeLists.txt
drivers/tests/UNITTESTS/Ticker/: CMakeLists.txt
drivers/tests/UNITTESTS/Timeout/: CMakeLists.txt
drivers/tests/UNITTESTS/Timer/: test_timer.cpp
drivers/tests/UNITTESTS/TimerEvent/: CMakeLists.txt
drivers/tests/UNITTESTS/UnbufferedSerial/: CMakeLists.txt
drivers/tests/UNITTESTS/doubles/: CMakeLists.txt  DigitalInOut_stub.cpp  DigitalIn_stub.cpp  InterruptIn_stub.cpp  SerialBase_stub.cpp  TimerEvent_stub.cpp
hal/include/hal/: ospi_api.h  qspi_api.h  serial_api.h  ticker_api.h
hal/source/: mbed_ticker_api.c
hal/tests/UNITTESTS/doubles/: CMakeLists.txt  PeripheralNames.h  analogout_api_stub.c  can_api_stub.c  device.h  flash_api_stub.c  gpio_api_stub.c  gpio_irq_api_stub.c  i2c_api_stub.c  itm_api_stub.c  lp_ticker_api_stub.c  objects.h  ospi_api_stub.c  port_api_stub.c  qspi_api_stub.c  serial_api_stub.c  spi_api_stub.c  ticker_api_stub.c
platform/tests/UNITTESTS/doubles/: CMakeLists.txt  CriticalSectionLock_stub.cpp  mbed_power_mgmt_stub.cpp  mbed_thread_stub.cpp
targets/TARGET_ARM_FM/TARGET_FVP_MPS2/: serial_api.c
targets/TARGET_ARM_SSG/TARGET_CM3DS_MPS2/: serial_api.c
targets/TARGET_ARM_SSG/TARGET_MPS2/: serial_api.c
targets/TARGET_ARM_SSG/TARGET_MUSCA_B1/: serial_api.c
targets/TARGET_ARM_SSG/TARGET_MUSCA_S1/: serial_api.c
targets/TARGET_Ambiq_Micro/TARGET_Apollo3/device/: serial_api.c
targets/TARGET_Cypress/TARGET_PSOC6/: cy_serial_api.c
targets/TARGET_Freescale/TARGET_KLXX/TARGET_KL25Z/: serial_api.c
targets/TARGET_Freescale/TARGET_KLXX/TARGET_KL46Z/: serial_api.c
targets/TARGET_Freescale/TARGET_MCUXpresso_MCUS/TARGET_K66F/: serial_api.c
targets/TARGET_GigaDevice/TARGET_GD32F30X/: serial_api.c
targets/TARGET_GigaDevice/TARGET_GD32F4XX/: serial_api.c
targets/TARGET_Maxim/TARGET_MAX32620C/: serial_api.c
targets/TARGET_Maxim/TARGET_MAX32625/: serial_api.c
targets/TARGET_Maxim/TARGET_MAX32630/: serial_api.c
targets/TARGET_Maxim/TARGET_MAX32660/: serial_api.c
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/: serial_api.c
targets/TARGET_NUVOTON/TARGET_M2354/: serial_api.c
targets/TARGET_NUVOTON/TARGET_M251/: serial_api.c
targets/TARGET_NUVOTON/TARGET_M261/: serial_api.c
targets/TARGET_NUVOTON/TARGET_M451/: serial_api.c
targets/TARGET_NUVOTON/TARGET_M480/: serial_api.c
targets/TARGET_NUVOTON/TARGET_NANO100/: serial_api.c
targets/TARGET_NUVOTON/TARGET_NUC472/: serial_api.c
targets/TARGET_NXP/TARGET_LPC11XX_11CXX/: serial_api.c
targets/TARGET_NXP/TARGET_LPC176X/: serial_api.c
targets/TARGET_RENESAS/TARGET_RZ_A1XX/: serial_api.c
targets/TARGET_RENESAS/TARGET_RZ_A2XX/: serial_api.c
targets/TARGET_STM/TARGET_STM32F0/: serial_device.c
targets/TARGET_STM/TARGET_STM32F1/: serial_device.c
targets/TARGET_STM/TARGET_STM32F2/: serial_device.c
targets/TARGET_STM/TARGET_STM32F3/: serial_device.c
targets/TARGET_STM/TARGET_STM32F4/: serial_device.c
targets/TARGET_STM/TARGET_STM32F7/: serial_device.c
targets/TARGET_STM/TARGET_STM32G0/: serial_device.c
targets/TARGET_STM/TARGET_STM32G4/: serial_device.c
targets/TARGET_STM/TARGET_STM32H7/: serial_device.c
targets/TARGET_STM/TARGET_STM32L0/: serial_device.c
targets/TARGET_STM/TARGET_STM32L1/: serial_device.c
targets/TARGET_STM/TARGET_STM32L4/: serial_device.c
targets/TARGET_STM/TARGET_STM32L5/: serial_device.c
targets/TARGET_STM/TARGET_STM32U5/: serial_device.c
targets/TARGET_STM/TARGET_STM32WB/: serial_device.c
targets/TARGET_STM/TARGET_STM32WL/: serial_device.c
targets/TARGET_Samsung/TARGET_SIDK_S1SBP6A/: serial_api.c
targets/TARGET_Samsung/TARGET_SIDK_S5JS100/: objects.h  serial_api.c  serial_dummy_api.c  serial_pl011_api.c  serial_usi_api.c
targets/TARGET_Silicon_Labs/TARGET_EFM32/: serial_api.c
targets/TARGET_TOSHIBA/TARGET_TMPM46B/: serial_api.c
targets/TARGET_TOSHIBA/TARGET_TMPM4G9/: serial_api.c
targets/TARGET_TOSHIBA/TARGET_TMPM4KN/: serial_api.c
tools/toolchains/: arm.py
(+11 files in other folders)
