# Copyright (c) 2021 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
add_subdirectory(doubles)
add_subdirectory(AnalogIn)
add_subdirectory(AnalogOut)
add_subdirectory(BufferedSerial)
add_subdirectory(BusIn)
add_subdirectory(BusInOut)
add_subdirectory(BusOut)
add_subdirectory(CAN)
add_subdirectory(DigitalIn)
add_subdirectory(DigitalInOut)
add_subdirectory(DigitalOut)
add_subdirectory(FlashIAP)
add_subdirectory(I2C)
add_subdirectory(I2CSlave)
add_subdirectory(InterruptIn)
add_subdirectory(MbedCRC)
add_subdirectory(OSPI)
add_subdirectory(PortIn)
add_subdirectory(PortInOut)
add_subdirectory(PortOut)
add_subdirectory(PwmOut)
add_subdirectory(QSPI)
add_subdirectory(ResetReason)
add_subdirectory(SPI)
add_subdirectory(SPISlave)
add_subdirectory(SerialBase)
add_subdirectory(SerialWireOutput)
add_subdirectory(Ticker)
add_subdirectory(Timeout)
add_subdirectory(TimerEvent)
add_subdirectory(UnbufferedSerial)
add_subdirectory(Watchdog)
